operator/src/desired/snapshots/balerix_operator__desired__jobs__tests__job_crew_sync.snap
---
source: src/desired/jobs.rs
expression: "crew_sync_job(&c, &crew(\"gh\"), Some(\"gh-token\")).unwrap()"
---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    balerix.ai/input-hash: 5e2a8938def9582addaa645179b7b3d6603319afddf641d48b40eb53fd3254c9
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: sync
    balerix.ai/crew: backend
    balerix.ai/daemon: default
    balerix.ai/fleet: payments
  name: payments-backend-sync
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Crew
      name: payments-backend
      uid: crew-uid
spec:
  backoffLimit: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: balerix-operator
        balerix.ai/component: sync
        balerix.ai/crew: backend
        balerix.ai/daemon: default
        balerix.ai/fleet: payments
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - crew-sync
            - "--crew"
            - payments/backend
            - "--repo"
            - acme/payments-api
            - "--ref"
            - main
            - "--gh-token-file"
            - /balerix/secret/gh-token
            - "--tool"
            - python=3.12.8
          command:
            - balerix-agent
          env:
            - name: HOME
              value: /balerix/scratch
          image: "ghcr.io/balerix-ai/balerix-agent:0.2.0"
          name: job
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /balerix/shared/repo
              name: shared
              readOnly: false
              subPath: fleets/payments/crews/backend/repo
            - mountPath: /balerix/shared/crew
              name: shared
              readOnly: false
              subPath: fleets/payments/crews/backend/pool
            - mountPath: /balerix/shared/fleet
              name: shared
              readOnly: true
              subPath: fleets/payments/pool
            - mountPath: /balerix/shared/daemon
              name: shared
              readOnly: true
              subPath: pools/daemon
            - mountPath: /balerix/scratch
              name: scratch
            - mountPath: /balerix/secret
              name: gh
              readOnly: true
      enableServiceLinks: false
      initContainers:
        - command:
            - mkdir
            - "-p"
            - /balerix/volume/fleets/payments/crews/backend/repo
            - /balerix/volume/fleets/payments/crews/backend/pool
            - /balerix/volume/fleets/payments/pool
            - /balerix/volume/pools/daemon
          image: "ghcr.io/balerix-ai/balerix-agent:0.2.0"
          name: slice
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /balerix/volume
              name: shared
      restartPolicy: Never
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: balerix-default-shared
        - emptyDir: {}
          name: scratch
        - name: gh
          secret:
            defaultMode: 288
            items:
              - key: token
                path: gh-token
            secretName: gh-token
