operator/src/desired/snapshots/balerix_operator__desired__jobs__tests__job_daemon_pool.snap
---
source: src/desired/jobs.rs
expression: daemon_pool_job(&c).unwrap()
---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    balerix.ai/input-hash: f356e3320d1a1bba7f25a4b57cd8b45b544abac7f0f48505e7814eeb6f1cfa1d
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: pool
    balerix.ai/daemon: default
  name: balerix-default-pool
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Crew
      name: payments-backend
      uid: crew-uid
spec:
  activeDeadlineSeconds: 3600
  backoffLimit: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: balerix-operator
        balerix.ai/component: pool
        balerix.ai/daemon: default
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - pool-sync
            - "--level"
            - daemon
          command:
            - balerix-agent
          env:
            - name: HOME
              value: /balerix/scratch
          image: "ghcr.io/balerix-ai/balerix-agent:0.2.0"
          name: job
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /balerix/shared/daemon
              name: shared
              readOnly: false
              subPath: pools/daemon
            - mountPath: /balerix/scratch
              name: scratch
            - mountPath: /tmp
              name: tmp
      enableServiceLinks: false
      initContainers:
        - command:
            - mkdir
            - "-p"
            - /balerix/volume/pools/daemon
          image: "ghcr.io/balerix-ai/balerix-agent:0.2.0"
          name: slice
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /balerix/volume
              name: shared
      restartPolicy: Never
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: balerix-default-shared
        - emptyDir: {}
          name: scratch
        - emptyDir: {}
          name: tmp
