operator/src/desired/snapshots/balerix_operator__desired__jobs__tests__the_remove_job_runs_crew_remove_over_the_crews_writable_slice.snap
---
source: src/desired/jobs.rs
expression: job
---
apiVersion: batch/v1
kind: Job
metadata:
  annotations:
    balerix.ai/input-hash: e87bcb74b68a36130a641d859524c6bcd492640b4f264513cbb0d71b05c03483
  labels:
    app.kubernetes.io/managed-by: balerix-operator
    balerix.ai/component: remove
    balerix.ai/crew: c
    balerix.ai/daemon: default
    balerix.ai/fleet: f
  name: f-c-remove
  namespace: team-a
  ownerReferences:
    - apiVersion: balerix.ai/v1alpha1
      controller: true
      kind: Crew
      name: payments-backend
      uid: crew-uid
spec:
  backoffLimit: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: balerix-operator
        balerix.ai/component: remove
        balerix.ai/crew: c
        balerix.ai/daemon: default
        balerix.ai/fleet: f
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
            - crew-remove
            - "--crew"
            - f/c
          command:
            - balerix-agent
          env:
            - name: HOME
              value: /balerix/scratch
          image: "ghcr.io/balerix-ai/balerix-agent:0.2.0"
          name: job
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /balerix/shared/repo
              name: shared
              readOnly: false
              subPath: fleets/f/crews/c/repo
            - mountPath: /balerix/shared/crew
              name: shared
              readOnly: false
              subPath: fleets/f/crews/c/pool
            - mountPath: /balerix/scratch
              name: scratch
            - mountPath: /tmp
              name: tmp
      enableServiceLinks: false
      initContainers:
        - command:
            - mkdir
            - "-p"
            - /balerix/volume/fleets/f/crews/c/repo
            - /balerix/volume/fleets/f/crews/c/pool
          image: "ghcr.io/balerix-ai/balerix-agent:0.2.0"
          name: slice
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePolicy: FallbackToLogsOnError
          volumeMounts:
            - mountPath: /balerix/volume
              name: shared
      restartPolicy: Never
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: balerix-default-shared
        - emptyDir: {}
          name: scratch
        - emptyDir: {}
          name: tmp
